--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
       <link rel="icon" href="logo.png">
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
      <link rel="stylesheet" type="text/css" href="index.css">
    </head>
    <body>
@@ -13,24 +14,25 @@
          <a href="gallery.html">Gallery</a>
          <a class="active" href="#contact">Contact</a>
        </div>
+       <br>
          <h1 style="text-align: center; align-items: center;">Contact Me</h1>
-         <br>
+
              <div class="square"></div>
-            <h5 id="space" style="text-align: center; color: #A7A7A7; padding-top: 25px;">I hope to hear from you soon!</h5>
+            <h4 id="space" style="text-align: center; color: #A7A7A7; font-size: 35px;">I hope to hear from you soon!</h4>
          <div id="mainContact" style="display: flex; justify-content: center; align-items: center;">
             <form action="https://formspree.io/maypjpnr" method="POST">
                <div id="topBox">
                   <div id="nameBox">
-                     <p id="contactP" style=" color:#949494; font-size: 18px;">Name</p>
+                     <p id="contactP" style=" color:#949494; font-size: 20px;">Name</p>
                      <input class="input" type="text" name="name">
                   </div>
                   <div id="emailBox">
-                     <p id="contactP" style="color:#949494; font-size: 18px;">Email</p>
+                     <p id="contactP" style="color:#949494; font-size: 20px;">Email</p>
                      <input class="input" type="email" name="_replyto">
                   </div>
                </div>
                <div id="messageBox">
-                  <p id="contactP" style="color:#949494; font-size: 18px;">Message</p><br /><textarea id="messageField" name="message"></textarea>
+                  <p id="contactP" style="color:#949494; font-size: 20px;">Message</p><br /><textarea id="messageField" name="message"></textarea>
                </div>
                <input type="text" name="_gotcha" style="display:none" />
                <div style="text-align: center; padding-top: 30px; padding-bottom: 10px;">
@@ -38,8 +40,6 @@
                </div>
             </form>
          </div>
-      <footer>
-        <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><h5 style="color: white; font-size:15px;">&copy; Nolan Perry 2020</h5></div>
-    </footer>
+         <footer><div style="background-color: #F9F9F9; padding: 50px; display: flex; justify-content: center; align-items: center;"><h5 style="color: rgb(92, 92, 92); font-size:25px;">&copy; Nolan Perry 2021</h5></div></footer>
    </body>
 </html>
