--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
         <link rel="icon" href="logo.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
         <link rel="stylesheet" type="text/css" href="index.css">
         <title>
             Photography
@@ -15,9 +16,21 @@
             <a class="active" href="#gallery">Gallery</a>
             <a href="contact.html">Contact</a>
           </div>
-            <h1 style="text-align: center; align-items: center;">Photo Gallery</h1>
-            <br>
+          <br>
+          <br>
+            <h1 style="text-align: center; align-items: center;">Gallery</h1>
              <div class="square"></div>
+             <h4 style="display: flex; flex-direction: column; align-items: center; margin: auto; padding-top:50px;">May 2021</h4>
+            <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
+                <img class="photo" src="lossless/52l.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/55l.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/53l.jpg" alt="Phototography" />
+            </div>
+            <div class="rightImages" style="display: flex; float: right; flex-wrap: wrap; flex-direction: column; padding-top: 70px">
+                <img class="photo" src="lossless/56r.jpg" alt="Phototography" />
+                <img class="photo" src="lossless/54r.jpg" alt="Phototography" />
+            </div>
+        <div style="width: 100%; display: flex; justify-content: center;"></div>
              <h4 style="display: flex; flex-direction: column; align-items: center; margin: auto; padding-top:50px;">January 2021</h4>
             <div class="leftImages" style="display: flex; float: left; flex-wrap: wrap; flex-direction: column; align-items: flex-end;">
                 <img class="photo" src="lossless/49_l.jpg" alt="Phototography" />
@@ -116,17 +129,15 @@
         </div>
         
 
-        <h2 style="text-align: center; width: 100%; display: flex; justify-content: center; word-wrap: auto; margin: auto;">Feel free to contact me!</h2>
-        <h5 style="text-align: center; color: #A7A7A7;">I hope to hear from you soon!</h5>
+        <h2 style="text-align: center; width: 100%; display: flex; justify-content: center; line-height: 50px;">Feel free to contact me!</h2>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 10px;">
             <a class="button1" href="contact.html">Contact</a>
         </div>
-        <h2 style="text-align: center; width: 100%; display: flex; justify-content: center; padding-top: 100px; word-wrap: auto; margin: auto;">Head back up to the top</h2>
+        <h2 style="text-align: center; width: 100%; display: flex; justify-content: center; padding-top: 100px; word-wrap: auto; margin: auto;  line-height: 50px;"">Head back up to the top</h2>
+        <br>
         <div style="width: 100%; display: flex; justify-content: center; padding-top: 10px; padding-bottom: 50px;">
             <a class="button2" href="#top"><img class="center" style="width: 40%; display: block; margin-right: auto; margin-left: auto;" src="arrow.png">
         </div>
-        <footer>
-            <div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><h5 style="color: white; font-size:15px;">&copy; Nolan Perry 2020</h5></div>
-        </footer>
+        <footer><div style="background-color: #F9F9F9; padding: 50px; display: flex; justify-content: center; align-items: center;"><h5 style="color: rgb(92, 92, 92); font-size:25px;">&copy; Nolan Perry 2021</h5></div></footer>
     </body>
 </html> 
