--- a/index.html
+++ b/index.html
@@ -1,66 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <script async defer data-domain="nolanperry.me" src="https://plausible.io/js/plausible.js"></script>
-        <!-- Panelbear Analytics - We respect your privacy --><script async src="https://cdn.panelbear.com/analytics.js?site=9LioAh1LCRL"></script><script>    window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
-    panelbear('config', { site: '9LioAh1LCRL' });
-</script>
-
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="icon" type="image/png" href="logo1.png"/>
-        <title>
-            Nolan Perry
-        </title>
-    </head>
-    <body>
-        <div class="topnav">
-            <a class="active" href="#introduction">Home</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="contact.html">Contact</a>
-          </div>
-            <h1 style="text-align: center; align-items: center;">Nolan Perry</h1>
-            <br>
-             <div class="square"></div>
-             <br>
-             <br>
-             <br>
-             <h5 style="text-align: center; line-height: 38px; margin: -30px; padding-bottom: 50px;"> Photography & visuals</h5>
-            <img class="profile" src="profile.jpg" alt="Profile picture"/>
-             <div class="bioContainer">
-                <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center; margin: auto;">
-                    <div id="collage">
-                        <img id="graphics" srcset="lauren_mobile.png 1000w, lauren_desk.png 2000w"/>
-                    </div>
-                <div>
-                        <div id="homepanels"> 
-                            <h1 id="h1center" >Nature + Portraiture.</h1>
-                            <p style="padding-bottom: 25px;">Using photography to capture moments from beautiful landscapes is something I've always enjoyed; but so has been using it to capture others' emotion. So, why not combine the two?</p>
-                            <a href="contact.html" class="button1">Contact</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <div id="break" style="text-align: center; word-wrap: break-word;">
-            <h1 style="word-wrap: auto; width: auto; line-height: 50px; font-size:calc(30px + 1.5vw);">Check out more of what I do:</h1>
-            <a class="button2" href="https://unsplash.com/@nolanperry"><img class="center" style="width: 65px;" src="un.png">
-                <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 20px; padding-right: 20px;" src="dr.png">
-            <a class="button2" href="https://www.behance.net/nolanperry"><img class="center" style="width: 65px;" src="be.png">
-        <div class="bioContainer">
-            <div id="bio" style="display: flex; justify-content: space-evenly; align-items: center;">
-                <div>
-                    <div id="homepanels">
-                        <h1 id="h1center">A Space of Opportunity.</h1>
-                        <p style="padding-bottom: 25px;">Photography has been a hobby of mine for about three years. It is very exciting to be able to explore the beauty of nature with friends and family, and to take some awesome photos with them along the way.</p>
-                        <a href="gallery.html" class="button1">View Gallery</a>
-                    </div>
-                </div>
-                <div id="collage">
-                    <img id="graphics" srcset="macey_mobile.png 1000w, macey_desk.png 2000w"/>
-                </div>
-            </div>
-        </div>
-        <footer><div style="background-color: #2B2E30; padding: 0px; display: flex; justify-content: center; align-items: center;"><h5 style="color: white; font-size:15px;">&copy; Nolan Perry 2020</h5></div></footer>
-    </body>
+<head>
+    <script async defer data-domain="nolanperry.me" src="https://plausible.io/js/plausible.js"></script>
+    <script async src="https://cdn.panelbear.com/analytics.js?site=9LioAh1LCRL"></script><script>    window.panelbear = window.panelbear || function(){ window.panelbearQ = window.panelbearQ || []; panelbearQ.push(arguments); };
+        panelbear('config', { site: '9LioAh1LCRL' });
+    </script>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" type="image/png" href="logo1.png"/>
+    <title>
+        Nolan Perry
+    </title>
+</head>
+<body>
+    <div class="topnav">
+        <a class="active" href="#introduction">Home</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div class="title-container">
+        <div><h3>Nolan Perry</h3><h5>Photography portfolio</h5></div>
+        <img style="max-width: 20%; min-width: 200px;" src="profile.png">
+      </div>
+  <script src="js/scripts.js"></script>
+  <div class="first-container">
+    <img style="max-width: 35%; min-width: 500px;" src="lauren01.png">
+    <div><h1 style="line-height: 100px; margin:0;">I'm a student<br>studying visual arts.</h1><p>I am currently a student attending Liberty University online obtaining my BA in graphic design. I look to use this degree to further my stance in photography, but more specifically am studying to become a user-interface and illustration designer.</p></div>
+</div>
+<div class=paddingBottom>
+  <div class="socialColor">
+    <div>
+     <h2 style="text-align: center; padding-bottom: 35px;">Social Platforms</h2>
+       <a class="button2" href="https://unsplash.com/@nolanperry"><img class="center" style="width: 65px;" src="unsplash.png">
+       <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 75px; padding-right: 75px;" src="dribbble.png">
+       <a class="button2" href="https://www.behance.net/nolanperry"><img class="center" style="width: 65px;" src="linkedin.png">
+    </div>
+  </div>
+</div>
+  <div class="second-container">
+    <div><h1 style="line-height: 100px; margin:0;">Photography<br>and portraiture.</h1><p>Ever since I started taking photos I have loved shooting portraits. It has always been exciting for me to capture emotion. Being outside gives the most unique shooting experience because nature is absolutely beautiful and constantly changing.</p><div class="centerButton"><a href="gallery.html" class="button1">View photo gallery</a></div></div>
+    <img style="max-width: 35%; min-width: 500px;" src="lauren02.png">
+  </div>
+  <footer><div style="background-color: #F9F9F9; padding: 50px; display: flex; justify-content: center; align-items: center;"><h5 style="color: rgb(92, 92, 92); font-size:25px;">&copy; Nolan Perry 2021</h5></div></footer>
+</body>
 </html>
