--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <h2 style="text-align: center; padding-bottom: 35px;">Social Platforms</h2>
        <a class="button2" href="https://unsplash.com/@nolanperry"><img class="center" style="width: 65px;" src="unsplash.png">
        <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 75px; padding-right: 75px;" src="dribbble.png">
-       <a class="button2" href="https://www.behance.net/nolanperry"><img class="center" style="width: 65px;" src="linkedin.png">
+       <a class="button2" href="https://www.linkedin.com/in/nolan-perry-a871a91b0?trk=people-guest_people_search-card"><img class="center" style="width: 65px;" src="linkedin.png">
     </div>
   </div>
 </div>
