--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="icon" type="image/png" href="logo1.png"/>
+    <link rel="icon" type="image/png" href="logo-bw.png"/>
     <title>
         Nolan Perry
     </title>
