updated web titles

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Contact</title>
+      <title>Nolan Perry - Contact</title>
       <link rel="icon" type="image/png" href="logo-bw.png"/>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
