--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
         <link rel="stylesheet" type="text/css" href="index.css">
         <title>
-            Photography
+            Nolan Perry - Photos
         </title>
     </head>
     <body>
