--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 <div class=paddingBottom>
   <div class="socialColor">
     <div>
-     <h2 style="text-align: center; padding-bottom: 35px;">Social Platforms</h2>
-       <a class="button2" href="https://unsplash.com/@nolanperry"><img class="center" style="width: 65px;" src="unsplash.png">
-       <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 65px; padding-left: 50px; padding-right: 50px;" src="dribbble.png">
-       <a class="button2" href="https://www.linkedin.com/in/nolan-perry-a871a91b0?trk=people-guest_people_search-card"><img class="center" style="width: 65px;" src="linkedin.png">
+     <h2 style="text-align: center; font-size: 40px; line-height: 75px;">Social Platforms</h2>
+       <a class="button2" href="https://unsplash.com/@nolanperry"><img class="center" style="width: 50px;" src="unsplash.png">
+       <a class="button2" href="https://dribbble.com/nolanperry"><img class="center" style="width: 50px; padding-left: 50px; padding-right: 50px;" src="dribbble.png">
+       <a class="button2" href="https://www.linkedin.com/in/nolan-perry-a871a91b0?trk=people-guest_people_search-card"><img class="center" style="width: 50px;" src="linkedin.png">
     </div>
   </div>
 </div>
