updated paragraphs on home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="js/scripts.js"></script>
   <div class="first-container">
     <img style="max-width: 35%; min-width: 400px;" src="lauren01.png">
-    <div><h1 style="line-height: 100px; margin:0;">I'm a student<br>studying visual arts.</h1><p>I am currently a student attending Liberty University online obtaining my BA in graphic design. I look to use this degree to further my stance in photography, but more specifically am studying to become a user-interface and illustration designer.</p></div>
+    <div><h1 style="line-height: 100px; margin:0;">I'm a student<br>studying visual arts.</h1><p>I am currently a student attending Liberty University online obtaining my BA in graphic design. I look to use this degree to become a user-interface and illustration designer, as well as to further my stance in photography.</p></div>
 </div>
 <div class=paddingBottom>
   <div class="socialColor">
@@ -40,7 +40,7 @@
   </div>
 </div>
   <div class="second-container">
-    <div><h1 style="line-height: 100px; margin:0;">Photography<br>and portraiture.</h1><p>Ever since I started taking photos I have loved shooting portraits. It has always been exciting for me to capture emotion. Being outside gives the most unique shooting experience because nature is absolutely beautiful and constantly changing.</p><div class="centerButton"><a href="gallery.html" class="button1">View photo gallery</a></div></div>
+    <div><h1 style="line-height: 100px; margin:0;">Photography<br>and portraiture.</h1><p>Ever since I got into photography I have loved shooting portraits. It has always been exciting for me to capture emotion. I find that being outside gives the most unique shooting experience, as nature is absolutely beautiful and constantly changing.</p><div class="centerButton"><a href="gallery.html" class="button1">View photo gallery</a></div></div>
     <img style="max-width: 35%; min-width: 400px;" src="lauren02.png">
   </div>
   <footer><div style="background-color: #F9F9F9; padding: 50px; display: flex; justify-content: center; align-items: center;"><h5 style="color: rgb(92, 92, 92); font-size:25px;">&copy; Nolan Perry 2021</h5></div></footer>
